--- a/Preprocessing[Music].ipynb
+++ b/Preprocessing[Music].ipynb
@@ -5,8 +5,9 @@
     "colab": {
       "name": "Preprocessing[Music].ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "mount_file_id": "1Nn2aQVjJaFdkX8833QjbicgGzrUTmCYs",
-      "authorship_tag": "ABX9TyPB859rFfqA0ge8HQwHCS9N",
+      "authorship_tag": "ABX9TyPQQyN0xmfdkudHu22kJwpZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,10 +63,11 @@
         "outputId": "6f37caad-6101-4741-a525-d52021b73d61"
       },
       "source": [
+        "# Display all filenames\n",
         "sum = 0\n",
         "for filename in os.listdir(pathname):\n",
         "  sum += 1\n",
-        "  print(filename)\n"
+        "  print(filename)"
       ],
       "execution_count": null,
       "outputs": [
@@ -311,6 +313,7 @@
         "outputId": "4d73f6de-b30d-453d-db5f-18e61a1d1c7d"
       },
       "source": [
+        "# Check that all files are included\n",
         "print (sum)"
       ],
       "execution_count": null,
@@ -337,10 +340,10 @@
         "n_fft = 2048\n",
         "hop_length = 512\n",
         "for filename in os.listdir(pathname):\n",
-        "  x,sr = librosa.load(pathname + \"/\" + filename, sr = 44100)\n",
+        "  x,sr = librosa.load(pathname + \"/\" + filename, sr = 44100) # load audio file with sampling rate 44.1k Hz\n",
         "  stft = librosa.stft(x, n_fft = n_fft, hop_length = hop_length)\n",
         "  amplitudeindB = librosa.amplitude_to_db(np.abs(stft), ref=np.max)\n",
-        "  print (np.max(abs(amplitudeindB))) # gives us max value of audio for each audio file"
+        "  print (np.max(abs(amplitudeindB))) # gives us max dB value of audio for each audio file"
       ],
       "execution_count": null,
       "outputs": [
@@ -607,7 +610,8 @@
         "outputId": "3b4a3648-af79-40e1-8045-7789f0af035b"
       },
       "source": [
-        "count = 0\n",
+        "# Obtain non-silent intervals within each track\n",
+        "# Allows me to have a better idea of how to trim each track into the desired 4s duration\n",
         "for filename in os.listdir(pathname):\n",
         "  x,sr = librosa.load(pathname + \"/\" + filename, sr = 44100)\n",
         "  nonmuteportions = librosa.effects.split(x) # default top_db = 60 dB\n",
@@ -1105,6 +1109,15 @@
         "From data above, there are 2 audio tracks with silences at the beginning. Since the audio track is already at the desired audio length (4s), I will not be trimming the silences.\n",
         "\n",
         "There are 2 audio tracks longer than 4s. Hence, we need to segment these audio tracks into multiple segments of 4s each."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eOvdhFsScFG0"
+      },
+      "source": [
+        "#### Trim audio tracks that are >4s into multiple tracks of 4s each"
       ]
     },
     {
