--- a/Preprocessing/Noise_Reduction.ipynb
+++ b/Preprocessing/Noise_Reduction.ipynb
@@ -4,7 +4,10 @@
   "metadata": {
     "colab": {
       "name": "Noise Reduction.ipynb",
-      "provenance": []
+      "provenance": [],
+      "mount_file_id": "1NwCjUARZc0hfAg0kvdLR47keWKC6Fzsd",
+      "authorship_tag": "ABX9TyNBgxGqxnN3Xbj66mxh6FDe",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +18,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/xychong/edgeaimonitoring/blob/main/Preprocessing/Noise_Reduction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -159,12 +172,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "id": "FY7ULY9z377d",
-        "outputId": "60cc78d8-3fe6-4e23-a38a-5283014e0601"
+        "id": "FY7ULY9z377d"
       },
       "source": [
         "for filename in os.listdir(pathname_footsteps):\n",
@@ -184,12 +192,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "id": "wEy7jPDy6Q3r",
-        "outputId": "1ba28171-87a5-410e-b3f4-0756af03730b"
+        "id": "wEy7jPDy6Q3r"
       },
       "source": [
         "for filename in os.listdir(new_pathname_footsteps):\n",
@@ -229,12 +232,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "id": "XUrJpVdBG05F",
-        "outputId": "27cee17f-f254-4c4f-9a8b-2ed6e638027b"
+        "id": "XUrJpVdBG05F"
       },
       "source": [
         "for filename in os.listdir(pathname_horn):\n",
@@ -254,12 +252,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "id": "P7bJ6tH9G7wq",
-        "outputId": "28944ade-a84e-41dc-97f5-d9d983911b09"
+        "id": "P7bJ6tH9G7wq"
       },
       "source": [
         "for filename in os.listdir(new_pathname_horn):\n",
