--- a/Quantization_Aware_Training.ipynb
+++ b/Quantization_Aware_Training.ipynb
@@ -6,7 +6,7 @@
       "name": "Quantization Aware Training.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMfA+xEv8BFy4nI7qZqub3t",
+      "authorship_tag": "ABX9TyP0PGFN1Kbn0RN2o32IjHOD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,8 +29,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "In this QAT, we are using uint8 input and output tensors. All operations are compiled to the Edge TPU. There are no operations running on the CPU."
+      ],
+      "metadata": {
+        "id": "J196NJHQnRQv"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -126,7 +135,7 @@
       "metadata": {
         "id": "guJSyPRLqKT4"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -141,7 +150,7 @@
         "id": "wgbsUW55zNHF",
         "outputId": "1a06dbb9-5337-4ccd-83f6-1bbce178c279"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,7 +174,7 @@
         "id": "Khui0WmLqU5Q",
         "outputId": "ffb41b42-2fa8-4e69-80b3-e7ce3a3b1636"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,7 +196,7 @@
       "metadata": {
         "id": "5ePW_kuaqV-H"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -202,7 +211,7 @@
       "metadata": {
         "id": "xCaUT9jmqdb4"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -217,7 +226,7 @@
         },
         "outputId": "763ecd4a-db76-42c1-f476-0dbe3bb4afcd"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -575,7 +584,7 @@
         },
         "outputId": "6aeb96f7-0a67-40b9-aa3a-d1ef631a5442"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -616,7 +625,7 @@
         "id": "BMFH3X0AqhDf",
         "outputId": "837c25d9-e40a-4272-e46a-e6402ce0e4bb"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -982,7 +991,7 @@
         "id": "We5Zjy7aq5r_",
         "outputId": "30ac5a4c-dc6e-481f-fc0c-7c3c17453fec"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1031,7 +1040,7 @@
         },
         "outputId": "b88d125a-6620-40b0-8b31-0161d73bcab9"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1066,7 +1075,7 @@
         },
         "outputId": "8f6ad998-98e7-4653-adb9-8b89def7e339"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1101,7 +1110,7 @@
         },
         "outputId": "28be8b08-96ea-4216-b3e4-381d842a7a11"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1141,7 +1150,7 @@
         },
         "outputId": "21252b58-366c-49d8-86e6-e94bb19f77c8"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1162,7 +1171,7 @@
       "metadata": {
         "id": "lYYTjxaLuSBt"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1194,7 +1203,7 @@
       "metadata": {
         "id": "aV1zpFxQxn9T"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1206,7 +1215,7 @@
       "metadata": {
         "id": "M0nZCj_gWvm4"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1230,7 +1239,7 @@
         },
         "outputId": "b34d4f9a-7646-4c6f-8293-b39ba8cf5114"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1255,7 +1264,7 @@
         },
         "outputId": "af7868de-a415-43dc-a6f1-b00c72097742"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1281,7 +1290,7 @@
         },
         "outputId": "60d6bdec-74af-49b8-f3ab-b51dc95dfb8a"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1304,7 +1313,7 @@
         },
         "outputId": "979d34d8-c019-4b16-ee29-3f174142a228"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1351,7 +1360,7 @@
         "id": "QpON7oxXvSIN",
         "outputId": "bb4bf64f-a344-4d14-ae6e-656ee682e871"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1406,7 +1415,7 @@
         },
         "outputId": "a5ea96bc-a725-4901-8a92-7aae8c84da5a"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1455,7 +1464,7 @@
         "id": "BOFRomtbsEOU",
         "outputId": "64e33cfd-1a98-465b-aa99-685f5e3800fc"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1495,7 +1504,7 @@
         },
         "outputId": "5d93749e-e024-4216-841b-be00dbed0aa4"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1555,7 +1564,7 @@
         },
         "outputId": "a3bb994b-92ec-45dc-b7bc-6bdcab4c4e02"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
