--- a/Quantization_Aware_Training_II.ipynb
+++ b/Quantization_Aware_Training_II.ipynb
@@ -6,7 +6,7 @@
       "name": "Quantization Aware Training II.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNPdoMKUtKMwibtPHtH4Xj9",
+      "authorship_tag": "ABX9TyOIIGf3hLMnMv8CyKXTsdlU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -181,7 +181,7 @@
       "metadata": {
         "id": "i1tPp_zqbrDN"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -196,7 +196,7 @@
         "id": "QCZA3lN6bs0x",
         "outputId": "25a1bc79-9b96-4cad-8a40-69db09bb234b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,7 +220,7 @@
         "id": "RagaCPHkbuJz",
         "outputId": "e27b628c-0b1c-457b-872c-4601d62df336"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,7 +242,7 @@
       "metadata": {
         "id": "FmGcNnxvbvHf"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -257,7 +257,7 @@
       "metadata": {
         "id": "6pbHLlwzbw6V"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -272,7 +272,7 @@
         "id": "XuXEplh0byE0",
         "outputId": "9281a438-9a98-4755-fb02-87f16ba3c507"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -630,7 +630,7 @@
         "id": "Ede02BbmbzFp",
         "outputId": "702be62f-19ab-476b-e675-06eb75c30ddb"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -671,7 +671,7 @@
         "id": "AJoM8hrIb0PU",
         "outputId": "d53a3127-0d4d-4bd5-f02e-5defc1ee9b30"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1037,7 +1037,7 @@
         "id": "NJ3d24tAb6O5",
         "outputId": "6971aeac-c482-436e-8dd0-532a15c840ce"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1086,7 +1086,7 @@
         "id": "ZTiG5cOhb8rK",
         "outputId": "46e9e998-b343-4a07-d508-a90dfdba31f8"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1121,7 +1121,7 @@
         "id": "4UrQI_K1b-Q1",
         "outputId": "b4998b62-68de-4291-93b7-247ff33518cf"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1156,7 +1156,7 @@
         "id": "u_YdVQW0b_0J",
         "outputId": "ed72d127-5570-4c32-c978-83b10e3616f8"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1167,6 +1167,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We observe a slight increase in accuracy after fine-tuning the model with fake quantization nodes so that the model is able to adjust its parameters and reduce the total model loss due to quantization."
+      ],
+      "metadata": {
+        "id": "80ibsdfCogmq"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1192,7 +1201,7 @@
         "id": "QXZ6LyVqcBy9",
         "outputId": "3fbacfdf-e8e5-41c0-9310-cb623e9db7c3"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1213,7 +1222,7 @@
       "metadata": {
         "id": "ce0sgkh8cIow"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1245,7 +1254,7 @@
       "metadata": {
         "id": "zdfipd-_cJvn"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1257,7 +1266,7 @@
       "metadata": {
         "id": "FOkuiM5FcNOA"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1281,7 +1290,7 @@
         },
         "outputId": "a9d8cf33-00a4-421d-a146-618b960c33b0"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1306,7 +1315,7 @@
         "id": "WAm_VQjRcPSC",
         "outputId": "d0db32de-62a3-4295-db0c-1d9b31793924"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1332,7 +1341,7 @@
         "id": "8ha4asM_cQjM",
         "outputId": "e6175729-dcae-40e1-c2d7-20c9cca2f3b4"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1355,7 +1364,7 @@
         "id": "OOn4imSNcRtp",
         "outputId": "58ea1dbd-4666-4d4e-ee0a-ba8b98af9a17"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1369,10 +1378,28 @@
     {
       "cell_type": "markdown",
       "source": [
+        "We observe no/almost no decrease in accuracy between the quantization aware TF model and quantization aware TFLite model. This is because we are still using float input and output tensors. "
+      ],
+      "metadata": {
+        "id": "a3S7Fht7oNpz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Compare size of float TFLite model and quantized TFLite model"
       ],
       "metadata": {
         "id": "RpPQy9RiciP3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Size of quantized model is slightly smaller (2.6019821166992188 Mb) as compared to when we use uint8 input and output tensors (2.60235595703125 Mb) because we have 2 operations (quantize and dequantize) that cannot be mapped to Edge TPU."
+      ],
+      "metadata": {
+        "id": "ahXjBz5aoL41"
       }
     },
     {
@@ -1402,7 +1429,7 @@
         "id": "wz4uu7btcjyn",
         "outputId": "995ad1d0-1bc8-4d71-fab0-1e279efcbe16"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1457,7 +1484,7 @@
         "id": "-wOxwLA5cmOt",
         "outputId": "b87cb4af-197c-4286-91cc-c639864620ab"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1506,7 +1533,7 @@
         "id": "p7yukf89cpGr",
         "outputId": "c6503f89-b0d7-464d-adac-0169859b0dd6"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1550,7 +1577,7 @@
         "id": "3Fz2QXfYcqQF",
         "outputId": "4e2f3e32-ec90-4cfd-9308-d97613e5ada6"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1615,7 +1642,7 @@
         },
         "outputId": "1306a13a-4756-4bde-84ae-39f00335da9f"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
