--- a/Quantization_Aware_Training.ipynb
+++ b/Quantization_Aware_Training.ipynb
@@ -6,7 +6,7 @@
       "name": "Quantization Aware Training.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP0PGFN1Kbn0RN2o32IjHOD",
+      "authorship_tag": "ABX9TyNvW/3tZ1jL+zGgCprXfBJZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1125,6 +1125,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "We observe a slight increase in accuracy after fine-tuning the model with fake quantization nodes. With the addition of fake quantization nodes, the model is able to adjust its parameters and reduce the total model loss due to quantization."
+      ],
+      "metadata": {
+        "id": "853B_XrcqU0A"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Create Quantized model for TFLite Backend"
       ],
       "metadata": {
@@ -1327,10 +1336,28 @@
     {
       "cell_type": "markdown",
       "source": [
+        "We observe a decrease in accuracy between the un-quantized quantization aware TF model and quantized quantization aware TFLite model. This is because we are still using uint8 input and output tensors."
+      ],
+      "metadata": {
+        "id": "Bt1mEY5ZqWaB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Compare size of float TFLite model and quantized TFLite model"
       ],
       "metadata": {
         "id": "sG6v0Kr9vX39"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Size of quantized model is slightly larger (2.60235595703125 Mb) as compared to when we use float input and output tensors (2.6019821166992188 Mb) because all operations can be mapped to Edge TPU."
+      ],
+      "metadata": {
+        "id": "9EgYdXnwqirA"
       }
     },
     {
