--- a/Quantization_Aware_Training.ipynb
+++ b/Quantization_Aware_Training.ipynb
@@ -6,7 +6,7 @@
       "name": "Quantization Aware Training.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNvW/3tZ1jL+zGgCprXfBJZ",
+      "authorship_tag": "ABX9TyNURPxlAu+V6yMr0gI/RBA4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1336,7 +1336,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We observe a decrease in accuracy between the un-quantized quantization aware TF model and quantized quantization aware TFLite model. This is because we are still using uint8 input and output tensors."
+        "We observe a larger decrease in accuracy between the un-quantized quantization aware TF model and quantized quantization aware TFLite model. This is because we are using uint8 input and output tensors. "
       ],
       "metadata": {
         "id": "Bt1mEY5ZqWaB"
