--- a/Quantization_Aware_Training_II.ipynb
+++ b/Quantization_Aware_Training_II.ipynb
@@ -6,7 +6,7 @@
       "name": "Quantization Aware Training II.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOIIGf3hLMnMv8CyKXTsdlU",
+      "authorship_tag": "ABX9TyNhzmGojYaOi3WrsmHW1Et8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1171,7 +1171,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We observe a slight increase in accuracy after fine-tuning the model with fake quantization nodes so that the model is able to adjust its parameters and reduce the total model loss due to quantization."
+        "We observe a slight increase in accuracy after fine-tuning the model with fake quantization nodes. With the addition of fake quantization nodes, the model is able to adjust its parameters and reduce the total model loss due to quantization."
       ],
       "metadata": {
         "id": "80ibsdfCogmq"
@@ -1378,7 +1378,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We observe no/almost no decrease in accuracy between the quantization aware TF model and quantization aware TFLite model. This is because we are still using float input and output tensors. "
+        "We observe no/almost no decrease in accuracy between the un-quantized quantization aware TF model and quantized quantization aware TFLite model. This is because we are still using float input and output tensors. "
       ],
       "metadata": {
         "id": "a3S7Fht7oNpz"
