--- a/Post_Training_Quantization_II.ipynb
+++ b/Post_Training_Quantization_II.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Post Training Quantization II.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN8R3/9BDJwzMbkMFitAN0h",
+      "authorship_tag": "ABX9TyMHxyYcW22jtD0VcjDcBy38",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
       "source": [
         "In this PTQ, we are using float input and output tensors. Hence, the compiler leaves a quantized operation at the beginning of the graph and dequantize the output at the end. \n",
         "\n",
-        "Both quantization and dequantization runs on the CPU instead of the Edge TPU. Thus, some amount of latency is added due to data format conversion.\n",
+        "Both quantization and dequantization runs on the CPU instead of the Edge TPU. Some amount of latency is added due to data format conversion.\n",
         "\n",
         "Ref: https://coral.ai/docs/edgetpu/models-intro/#compiling"
       ],
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -161,7 +161,7 @@
       "metadata": {
         "id": "uBCmnJ_KraGN"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -176,7 +176,7 @@
         "id": "n7VDINsUra5p",
         "outputId": "caa04ef4-a144-4c24-d672-8ae26c307080"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -200,7 +200,7 @@
         "id": "aHsDZUj1rbrx",
         "outputId": "6f31b9a0-8b23-47a8-817d-362d189de274"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -231,7 +231,7 @@
       "metadata": {
         "id": "ZNktc_mlrcrC"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -251,7 +251,7 @@
         "id": "1oKIfiBWrgDy",
         "outputId": "087825f2-06f5-4a83-90d9-96f19a6ed696"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -607,7 +607,7 @@
         "id": "f1F9VPDZrhvQ",
         "outputId": "07ed4a19-89c7-4056-b248-bd6d1afac728"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -639,7 +639,7 @@
         "id": "Zd6xPwvhrjUI",
         "outputId": "d7fbda9b-5cc6-459d-bcee-04ae2739853b"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -669,7 +669,7 @@
       "metadata": {
         "id": "qTyc-Wnirl5Y"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -697,7 +697,7 @@
         "id": "YlLafhq2rm0b",
         "outputId": "247a6e69-90a5-4d6d-ff85-bec7cfee68fb"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -726,7 +726,7 @@
       "metadata": {
         "id": "mKz7Ig-qrprC"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -759,7 +759,7 @@
         "id": "1-_e4SlMruS2",
         "outputId": "9c22c7b4-28ac-41d5-f6c3-fed2072ccbbb"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -793,7 +793,7 @@
       "metadata": {
         "id": "fzMpZb_crzku"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -805,7 +805,7 @@
       "metadata": {
         "id": "tIoqM2yFr0uu"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -829,7 +829,7 @@
         "id": "zBZmZdCzr3a0",
         "outputId": "e4f01487-65e2-4e1e-d06b-242c3b53a166"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -854,7 +854,7 @@
         "id": "_inx35xrr4dc",
         "outputId": "f1b7c041-1dba-4873-87dc-70c3f9d5110f"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -880,7 +880,7 @@
         "id": "JROSKFHor7ej",
         "outputId": "c0258b31-3275-4f8d-dcb8-5767bbddf4f1"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -945,7 +945,7 @@
         "id": "uIEbTwc4r8X-",
         "outputId": "fcc2e9d6-6e50-484b-f31c-048780c54818"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1000,7 +1000,7 @@
         "id": "oYkcQJN-sL5q",
         "outputId": "045d75de-9042-40e6-cda2-c9da00f41135"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1079,7 +1079,7 @@
         "id": "NIkCtPj5sP3x",
         "outputId": "e8d03900-7442-43cc-f135-3c5fb682aee4"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1123,7 +1123,7 @@
         "id": "VHLEIki8sSiP",
         "outputId": "077f3928-2bc3-485b-a211-51e86622b6f4"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1188,7 +1188,7 @@
         "id": "C5lDYPwWsX6s",
         "outputId": "4d44f25c-3e4b-4565-fdc3-a292fa0a9588"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
